--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -73,6 +73,7 @@ body.full-height-layout #app {
     border-radius: 0;
     box-shadow: none;
     display: block;
+    overflow: hidden;
 }
 
 .modal.no-footer .modal-content {
