--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -48,6 +48,11 @@ body.full-height-layout #app {
     padding: 0 !important;
 }
 
+.inmodal .modal-title {
+    padding: 0 60px;
+    margin: 0
+}
+
 .modal.inmodal .modal-header {
     position: relative;
     padding: 10px;
@@ -141,6 +146,7 @@ body.full-height-layout #app {
         height: auto !important;
     }
 }
+
 /**
     Custom full layout of ibox panel
  */
