--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,15 +3,17 @@
     white-space: nowrap;
 }
 
-.navbar-default .nav > li > a {
+.navbar-default .nav li a {
     font-weight: 400;
     font-size: 12px;
-    padding: 12px 20px 12px 10px;
 }
 
-.navbar-default .nav-second-level li a {
-    padding: 6px 10px 6px 10px !important;
-    padding-left: 20px !important;
+.navbar-default .nav-second-level > li > a {
+    padding: 6px 10px 6px 40px;
+}
+
+.navbar-default .nav-third-level > li:last-child {
+    padding-bottom: 0;
 }
 
 .navbar-default .nav > li.active {
